// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFilterButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props grow can be turned off 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--noGrow"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props iconType and iconSide is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--hasIcon"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty-isDisabled euiFilterButton"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props isSelected is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton-isSelected"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props numActiveFilters and hasActiveFilters is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton-hasActiveFilters"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="5 active filters"
        class="euiNotificationBadge euiNotificationBadge--medium euiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props numFilters is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton-hasNotification"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="5 available filters"
        class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props type is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props withNext is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--withNext"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton renders zero properly 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton-hasNotification testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="0 available filters"
        class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
      >
        0
      </span>
    </span>
  </span>
</button>
`;
